--- a/cheer-up-simple.html
+++ b/cheer-up-simple.html
@@ -155,7 +155,9 @@
 
       createApp({
         setup() {
-          const gifUrl = ref("hug.gif");
+          const gifUrl = ref(
+            "https://raw.githubusercontent.com/EnderFR3AK/cheerup/main/hug.gif",
+          );
           const label = ref("This is just for you");
 
           function loadGif(e) {
