fixed .html name

--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
 
       createApp({
         setup() {
-          const gifUrl = ref(
-            "https://raw.githubusercontent.com/EnderFR3AK/cheerup/main/hug.gif",
-          );
+          const gifUrl = ref("hug.gif");
           const label = ref("This is just for you");
 
           function loadGif(e) {
